fluxcd/hawkbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawkbit
  labels:
    app.kubernetes.io/name: hawkbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hawkbit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hawkbit
    spec:
      containers:
        - name: hawkbit
          image: hawkbit/hawkbit-update-server:0.3.0M8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /UI/login
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /UI/login
              port: http
            periodSeconds: 3
            timeoutSeconds: 60
          readinessProbe:
            httpGet:
              path: /UI/login
              port: http
            periodSeconds: 3
            timeoutSeconds: 60
