fluxcd/hawkbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: hawkbit
